--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   firebase_auth: ^4.17.6
   cloud_firestore: ^4.15.6
   provider: ^6.1.2
+  easy_date_timeline: ^1.0.6
+  intl: ^0.19.0
+  flutter_slidable: ^3.1.0
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
