--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_native_splash: ^2.4.0
   flutter_launcher_icons: ^0.13.1
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
